# django-project-template

./: .gitignore  README.md  copier.yaml  pyproject.toml
extensions/: django.py  slugify.py
template/: .env.jinja  README.md.jinja  pyproject.toml.jinja
template/src/: manage.py.jinja
template/src/{{ project_name }}/: settings.py.jinja
template/src/{{ project_package }}/: asgi.py.jinja  settings.py.jinja  urls.py.jinja  wsgi.py.jinja
