[project]
name = "django-project-template"
version = "0.1.0"
description = "Template to create a Django projedct with copier"
authors = [
    {name = "Kai Kuhlmann", email = "kaiman2468@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
